[gd_scene load_steps=10 format=2]

[ext_resource path="res://Data/UI/EditorTheme.tres" type="Theme" id=1]
[ext_resource path="res://Sprites/Editor/Objects.png" type="Texture" id=2]
[ext_resource path="res://Data/Editor/PlaceOptions.gd" type="Script" id=5]
[ext_resource path="res://Data/Editor/AntiCursor.gd" type="Script" id=6]
[ext_resource path="res://Data/Editor/TileLayerButton.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_bottom = 6.0
bg_color = Color( 0.913725, 0.847059, 0.717647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_right = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 6.0
bg_color = Color( 0.913725, 0.847059, 0.717647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[node name="PlaceOptions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -328.0
margin_bottom = -112.0
theme = ExtResource( 1 )
script = ExtResource( 5 )

[node name="PC" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="PC"]
margin_left = 1.0
margin_top = 1.0
margin_right = 87.0
margin_bottom = 127.0
script = ExtResource( 6 )

[node name="Vbc" type="VBoxContainer" parent="PC/CenterContainer"]
margin_left = 4.0
margin_top = 5.0
margin_right = 81.0
margin_bottom = 120.0

[node name="Hbc" type="HBoxContainer" parent="PC/CenterContainer/Vbc"]
margin_right = 77.0
margin_bottom = 25.0
script = ExtResource( 6 )

[node name="BSL" type="Label" parent="PC/CenterContainer/Vbc/Hbc"]
margin_right = 41.0
margin_bottom = 25.0
custom_styles/normal = SubResource( 1 )
text = "Brush 
size"
script = ExtResource( 6 )

[node name="BS" type="LineEdit" parent="PC/CenterContainer/Vbc/Hbc"]
margin_left = 45.0
margin_right = 77.0
margin_bottom = 25.0
text = "0"
script = ExtResource( 6 )

[node name="TextHbc" type="HBoxContainer" parent="PC/CenterContainer/Vbc"]
margin_top = 29.0
margin_right = 77.0
margin_bottom = 85.0
custom_constants/separation = 10
script = ExtResource( 6 )

[node name="Vbc" type="VBoxContainer" parent="PC/CenterContainer/Vbc/TextHbc"]
margin_right = 36.0
margin_bottom = 56.0
script = ExtResource( 6 )

[node name="FG" type="Label" parent="PC/CenterContainer/Vbc/TextHbc/Vbc"]
margin_right = 36.0
margin_bottom = 16.0
custom_styles/normal = SubResource( 2 )
text = "FG"

[node name="B" type="Label" parent="PC/CenterContainer/Vbc/TextHbc/Vbc"]
margin_top = 20.0
margin_right = 36.0
margin_bottom = 36.0
custom_styles/normal = SubResource( 2 )
text = "BASE"

[node name="BG" type="Label" parent="PC/CenterContainer/Vbc/TextHbc/Vbc"]
margin_top = 40.0
margin_right = 36.0
margin_bottom = 56.0
custom_styles/normal = SubResource( 2 )
text = "BG"

[node name="LayerVbc" type="VBoxContainer" parent="PC/CenterContainer/Vbc/TextHbc"]
margin_left = 46.0
margin_right = 62.0
margin_bottom = 56.0
script = ExtResource( 6 )

[node name="Foreground" parent="PC/CenterContainer/Vbc/TextHbc/LayerVbc" instance=ExtResource( 7 )]

[node name="LevelLayout" parent="PC/CenterContainer/Vbc/TextHbc/LayerVbc" instance=ExtResource( 7 )]
margin_top = 20.0
margin_bottom = 36.0
texture = SubResource( 3 )

[node name="Background" parent="PC/CenterContainer/Vbc/TextHbc/LayerVbc" instance=ExtResource( 7 )]
margin_top = 40.0
margin_bottom = 56.0
texture = SubResource( 4 )

[node name="Hbc3" type="HBoxContainer" parent="PC/CenterContainer/Vbc"]
margin_top = 89.0
margin_right = 77.0
margin_bottom = 115.0
script = ExtResource( 6 )

[node name="FF" type="CheckButton" parent="PC/CenterContainer/Vbc/Hbc3"]
margin_right = 49.0
margin_bottom = 26.0
custom_styles/normal = SubResource( 1 )
text = "Fill"
script = ExtResource( 6 )
